# investment-advisor-suite

./: LICENSE  README.en.md  README.md  README.zh-CN.md
financial-market-data-tools/: README.md  SKILL.md  pyproject.toml
financial-market-data-tools/agents/: openai.yaml
financial-market-data-tools/references/: cli-examples.md  setup.md  source-notes.md
financial-market-data-tools/scripts/: common.py  futu_opend_tool.py  tushare_pro_tool.py  yahoo_market_tool.py
using-financial-advisor/: README.md  SKILL.md  pyproject.toml
using-financial-advisor/agents/: openai.yaml
using-financial-advisor/references/: examples.md  intake-checklists.md  safety-boundaries.md  task-modes.md
